After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 768733 - [regression] Nautilus ignores remote thumbnailing setting
[regression] Nautilus ignores remote thumbnailing setting
Status: RESOLVED FIXED
Product: nautilus
Classification: Core
Component: Thumbnails
3.20.x
Other Linux
: Normal major
: 3.20
Assigned To: Nautilus Maintainers
Nautilus Maintainers
Depends on:
Blocks:
 
 
Reported: 2016-07-12 13:49 UTC by Jean-François Fortin Tam
Modified: 2016-07-18 10:13 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
directory: fix nautilus_directory_is_local() (1.39 KB, patch)
2016-07-16 10:27 UTC, Ernestas Kulik
committed Details | Review

Description Jean-François Fortin Tam 2016-07-12 13:49:39 UTC
Since 3.20.x, Nautilus now tries to thumbnail images and videos (and whatever else is thumbnailable) in SFTP folders I connect to, even though it's specifically set, in the preferences, to only thumbnail small local files...

I can easily confirm this by looking at the bandwidth usage in gnome-system-monitor.
Comment 1 Carlos Soriano 2016-07-12 13:52:33 UTC
is that setting set in the preferences dialog or did you modify directly with dconf?
Comment 2 Jean-François Fortin Tam 2016-07-12 19:09:09 UTC
I set it using the app's preference dialog. It was already set before, and I unset and re-set it using the GUI just to be sure.
Comment 3 Ernestas Kulik 2016-07-16 09:32:35 UTC
The culprit here is nautilus_directory_is_local(), which is effectively broken with locally mounted remote filesystems.
Comment 4 Ernestas Kulik 2016-07-16 10:27:28 UTC
Created attachment 331624 [details] [review]
directory: fix nautilus_directory_is_local()

g_file_is_native() should be enough to decide whether the file is local.
Checking if g_file_get_path() returns a native path lets us know if the
directory is possibly made available by use of FUSE and there is
nautilus_directory_is_local_or_fuse() for that.
Comment 5 Ernestas Kulik 2016-07-16 10:28:22 UTC
As always, I am not entirely sure whether my assumptions are correct. The patch should, however, fix this exact case.
Comment 6 Carlos Soriano 2016-07-18 10:08:15 UTC
Review of attachment 331624 [details] [review]:

This looks good to me, thanks Ernestas! Feel free to push to gnome-3-20 too

This change was made in the past for other reasons, and now doesn't make much sense.
Comment 7 Ernestas Kulik 2016-07-18 10:13:04 UTC
Attachment 331624 [details] pushed as 64de32c - directory: fix nautilus_directory_is_local()