directory: fix nautilus_directory_is_local()

g_file_is_native() should be enough to decide whether the file is local.
Checking if g_file_get_path() returns a native path lets us know if the
directory is possibly made available by use of FUSE and there is
nautilus_directory_is_local_or_fuse() for that.

https://bugzilla.gnome.org/show_bug.cgi?id=768733